--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "@material-ui/core": "^5.0.0-alpha.28",
     "@material-ui/icons": "^5.0.0-alpha.28",
     "@material-ui/styles": "^4.10.0",
+    "animate.css": "^4.1.1",
+    "aphrodite": "^2.4.0",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "firebase": "^8.3.1",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "install": "^0.13.0",
@@ -41,10 +44,14 @@
     "npm": "^7.7.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
+    "radium": "^0.26.1",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.2",
+    "react-easy-animate": "^1.0.6",
     "react-feather": "^2.0.8",
+    "react-firebase": "^2.2.8",
     "react-helmet": "^6.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-beta.0",
